﻿===== Smarty 3.2-DEV  =====
27.11.2011
- update of exception messages

26.11.2011
- add runtime traceback to template {function}

25.11.2011
- enhancement make cache_modied_check work also with individually cached subtemplates (issue 46)

20.11.2011
- tweak remove unneeded ?><?php context switching from compiled templates

15.11.2011
- removed $use_reflection property as  reflection is now mandatory

12.11.2011
- use Reflection to check parameter when compiling modifier code

01.11.2011
- bugfix adjust displayed line numbers for SmartyCompilerException in {block} tags to be 
  absolute to start of source file

24.10.2011
- tweak performance replace strncmp with strpos (15% faster)
- tweak make internal variable static to (often called) smartyAutoload
- fix template source traceback when using inheritance

23.10.2011
- make template source traceback on SmartyRunTimeException working also in nocache
  sections in cache files

22.10.2011
- add {exception} tag
- improved Exception messages (work still in progress)
- bugfix call of plugin with Smarty | Smarty_Internal_Template object as only 
  parameter was incorrectly compiled
- add buildRefection() internal method for code optimization

21.10.2011
- bugfix nocache_hash processing

19.10.2011
- improvement SmartyRunTimeException now shows template source lines of error
- fix SmartyRunTimeException on eval and string resources
- bugfix getConfigVars() should also run into the default_config_variable_handler
- merged 3.1.4

18.10.2011
- bugfix {${$foo}} did not work (Smarty 3.2 parser)
- improvement remove BOM of template and config files in lexer
- bugfix cache_attr of registered plugins did not work after adding PHP reflection
- add $disable_core_plugins to disable looking for plugins in Smarty's plugins/

16.10.2011
- pass context object to default variable handlers
- add support of function and block plugins which use real parameter instead $params array
- moved compiled object into its own file smarty_compiled.php