@@ -1,6 +1,7 @@
 ﻿===== Smarty 3.2-DEV  =====
 27.11.2011
 - update of exception messages
+- make class Smarty_Template_Cached in file smarty_cacheresource.php loadable by autoloader
 
 26.11.2011
 - add runtime traceback to template {function}
